--- a/content/publication/haowu2018/cite.bib
+++ b/content/publication/haowu2018/cite.bib
@@ -1,8 +1,6 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@article{wu2016new,
+  title={A new earthquake location method based on the waveform inversion},
+  author={Wu, Hao and Chen, Jing and Huang, Xueyuan and Yang, Dinghui},
+  journal={arXiv preprint arXiv:1610.07135},
+  year={2016}
 }
