--- a/content/publication/jingchen2018/cite.bib
+++ b/content/publication/jingchen2018/cite.bib
@@ -1,8 +1,9 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@article{chen2018quadratic,
+  title={The quadratic Wasserstein metric for earthquake location},
+  author={Chen, Jing and Chen, Yifan and Wu, Hao and Yang, Dinghui},
+  journal={Journal of Computational Physics},
+  volume={373},
+  pages={188--209},
+  year={2018},
+  publisher={Elsevier}
 }
