--- a/content/publication/2018haowu_anew/cite.bib
+++ b/content/publication/2018haowu_anew/cite.bib
@@ -1,6 +1,8 @@
-@article{wu2016new,
+@article{wu2018new,
   title={A new earthquake location method based on the waveform inversion},
   author={Wu, Hao and Chen, Jing and Huang, Xueyuan and Yang, Dinghui},
-  journal={arXiv preprint arXiv:1610.07135},
-  year={2016}
+  journal={Communications in computational physics},
+  year={2018},
+  volume={23},
+  pages={118--141},
 }
