--- a/content/publication/2023zhengyangli_quadratic/cite.bib
+++ b/content/publication/2023zhengyangli_quadratic/cite.bib
@@ -1,8 +1,6 @@
-@article{chen2023adjoint,
-  title={Adjoint-state traveltime tomography for azimuthally anisotropic media in spherical coordinates},
-  author={Chen, Jing and Chen, Guoxu and Nagaso, Masaru and Tong, Ping},
-  journal={Geophysical Journal International},
-  pages={ggad093},
-  year={2023},
-  publisher={Oxford University Press}
+@article{li2022quadratic,
+  title={The quadratic Wasserstein metric with squaring scaling for seismic velocity inversion},
+  author={Li, Zhengyang and Tang, Yijia and Chen, Jing and Wu, Hao},
+  journal={arXiv preprint arXiv:2201.11305},
+  year={2022}
 }
