--- a/content/publication/2023jingchen_adjoint/cite.bib
+++ b/content/publication/2023jingchen_adjoint/cite.bib
@@ -1,8 +1,18 @@
-@article{chen2023adjoint,
-  title={Adjoint-state traveltime tomography for azimuthally anisotropic media in spherical coordinates},
-  author={Chen, Jing and Chen, Guoxu and Nagaso, Masaru and Tong, Ping},
-  journal={Geophysical Journal International},
-  pages={ggad093},
-  year={2023},
-  publisher={Oxford University Press}
+@article{10.1093/gji/ggad093,
+    author = {Chen, Jing and Chen, Guoxu and Nagaso, Masaru and Tong, Ping},
+    title = "{Adjoint-state traveltime tomography for azimuthally anisotropic media in spherical coordinates}",
+    journal = {Geophysical Journal International},
+    volume = {234},
+    number = {1},
+    pages = {712-736},
+    year = {2023},
+    month = {03},
+    abstract = "{Tong has proposed an adjoint-state traveltime tomography method to determine velocity heterogeneity and azimuthal anisotropy. This method, however, ignores the Earth’s curvature when deriving the eikonal equation for azimuthally anisotropic media. Thus, further coordinate transformation or approximation is required to ensure the accuracy of traveltime prediction in large-scale tomography. To address this problem, we derive the eikonal equation for azimuthally anisotropic media in spherical coordinates, which naturally considers the Earth’s curvature. Another key ingredient is the forward modelling algorithm, whose accuracy and efficiency dominate the numerical error and computational cost of the inversion. In this study, we apply a modified fast sweeping method to solve the eikonal equation in spherical coordinates. Two approaches, including the third-order weighted essentially non-oscillatory approximation and multiplicative factorization technique, are applied to improve the accuracy. According to the numerical experiments, this new eikonal solver achieves a second-order accuracy and is about two orders of magnitude more accurate than the commonly used first-order fast sweeping method with similar runtime. Taking advantage of the two improvements, we develop a novel eikonal equation-based adjoint-state traveltime tomography method for azimuthally anisotropic media in spherical coordinates. This method is applicable for large-scale tomography, and its performance is verified by a synthetic checkerboard test and a practical seismic tomographic inversion in central California near Parkfield.}",
+    issn = {0956-540X},
+    doi = {10.1093/gji/ggad093},
+    url = {https://doi.org/10.1093/gji/ggad093},
+    eprint = {https://academic.oup.com/gji/article-pdf/234/1/712/49605335/ggad093.pdf},
 }
+
+
+
